--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,8 @@
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
-                        <compilerArg>Amapstruct.defaultComponentModel=spring</compilerArg>
+<!--                        <compilerArg>mapstruct.defaultComponentModel=spring</compilerArg>-->
+                        <arg>-Amapstruct.defaultComponentModel=spring</arg>
                     </compilerArgs>
                 </configuration>
 
