--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -4,3 +4,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/restdb?useUnicode=true&charact
 spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# hibernate can generate schema on DB by looking at entity classes in the project.
+spring.jpa.hibernate.ddl-auto=update
+
+# Show SQL
+spring.jpa.properties.hibernate.show_sql=true
+
+# Format SQL logs
+spring.jpa.properties.hibernate.format_sql=true
