--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.show_sql=true
 
 # Format SQL logs
 spring.jpa.properties.hibernate.format_sql=true
+
+# Show bind sql (for debug purposes)
+logging.level.org.hibernate.orm.jdbc.bind =trace
