--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -8,6 +8,27 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # hibernate can generate schema on DB by looking at entity classes in the project.
 spring.jpa.hibernate.ddl-auto=update
 
+# Hikari Connection Pool Properties
+###
+
+# Appears in the logs
+spring.datasource.hikari.pool-name=RestDB-Pool
+# The max number of connections to be established (default = 10)
+spring.datasource.hikari.maximum-pool-size=5
+# Other properties to boost the performance of the application
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
+spring.datasource.hikari.data-source-properties.useLocalSesionState=true
+spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
+spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
+spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
+spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
+spring.datasource.hikari.data-source-properties.maintainTimeStats=false
+
+###
+
 # Show SQL
 spring.jpa.properties.hibernate.show_sql=true
 
