--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -8,6 +8,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # hibernate can generate schema on DB by looking at entity classes in the project.
 spring.jpa.hibernate.ddl-auto=update
 
+#Script generation: create scripts - using entities metadata - create or append scripts in a file called 'create.sql'
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
+
+
 # Hikari Connection Pool Properties
 ###
 
