jakarta schema generation: drop-and-create In 'localmysql' profile.

--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -8,10 +8,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # hibernate can generate schema on DB by looking at entity classes in the project.
 spring.jpa.hibernate.ddl-auto=update
 
-#Script generation: create scripts - using entities metadata - create or append scripts in a file called 'create.sql'
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+#Script generation: create scripts - using entities metadata -
+# write 'drop table if exists ...' scripts in drop-scripts.sql
+# write 'create table ...' scripts in create-scripts.sql
+# (You can write them both in the same file. Just assign the same filename as value below)
+# (If the same file is used, drop scripts comes first and then create scripts are written)
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
 spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-scripts.sql
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create-scripts.sql
 
 
 # Hikari Connection Pool Properties
