comment out unnecessary sql script generation properties.

--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -13,10 +13,10 @@ spring.jpa.hibernate.ddl-auto=update
 # write 'create table ...' scripts in create-scripts.sql
 # (You can write them both in the same file. Just assign the same filename as value below)
 # (If the same file is used, drop scripts comes first and then create scripts are written)
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-scripts.sql
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create-scripts.sql
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-scripts.sql
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create-scripts.sql
 
 
 # Hikari Connection Pool Properties
