--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # hibernate can generate schema on DB by looking at entity classes in the project.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 #Script generation: create scripts - using entities metadata -
 # write 'drop table if exists ...' scripts in drop-scripts.sql
@@ -15,8 +15,8 @@ spring.jpa.hibernate.ddl-auto=update
 # (If the same file is used, drop scripts comes first and then create scripts are written)
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-scripts.sql
-#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create-scripts.sql
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-create.sql
 
 
 # Hikari Connection Pool Properties
