Fix IT test: migration scripts not compatible with H2. disable flyway when using H2. (default profile) enable flyway when using mysql.(localmysql profile)

--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -8,6 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # hibernate can generate schema on DB by looking at entity classes in the project.
 spring.jpa.hibernate.ddl-auto=validate
 
+# For this profile, enable flyway to manage migrations.
+spring.flyway.enabled=true
+
 #Script generation: create scripts - using entities metadata -
 # write 'drop table if exists ...' scripts in drop-scripts.sql
 # write 'create table ...' scripts in create-scripts.sql
