--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 # Everything in the package has logging level of debug. We can see debug logs
 logging.level.com.springframework=debug
+
+# For this profile, do not use flyway. The migration scripts are not compatible with H2 in-memory DB.
+# We might change the scripts OR disable flyway and let hibernate manage entities.
+# H2 is not our persistent DB, it is for development and test purposes.
+spring.flyway.enabled=false
